MicroServices in Kubernetes/Istio Application/node-grafana.yaml
# Prometheus
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.53.0
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: istio-system
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090

# Grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-grafana
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: istio/grafana:1.43.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: istio-grafana
  namespace: istio-system
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31031
