MicroServices in Kubernetes/Istio Application/node-istio.yml
# Node.js Gateway & VirtualService
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nodejs-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts: ["*"]
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nodejs
  namespace: default
spec:
  hosts: ["*"]
  gateways: ["nodejs-gateway"]
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: nodejs
            port:
              number: 8080

# Grafana Gateway & VirtualService
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 31031
        name: http-grafana
        protocol: HTTP
      hosts: ["*"]
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts: ["*"]
  gateways: ["grafana-gateway"]
  http:
    - route:
        - destination:
            host: istio-grafana
            port:
              number: 3000
